testsuite/tests/typecheck/should_fail/FDsFromGivens.stderr

FDsFromGivens.hs:9:7: error:
    Couldn't match type ‘[a]’ with ‘Bool’
      arising from a functional dependency between constraints:
        ‘C Char Bool’
          arising from the type signature for:
                         g1 :: (C Char [a], C Char Bool) => a -> ()
          at FDsFromGivens.hs:9:7-42
        ‘C Char [a]’
          arising from the type signature for:
                         g1 :: (C Char [a], C Char Bool) => a -> ()
          at FDsFromGivens.hs:9:7-42
    Inaccessible code in
      the type signature for:
        g1 :: (C Char [a], C Char Bool) => a -> ()
    In the ambiguity check for ‘g1’
    To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
    In the type signature: g1 :: (C Char [a], C Char Bool) => a -> ()
